--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "firebase": "^8.1.1",
+    "firebase-admin": "^9.4.1",
     "helmet": "^4.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.4",
+    "socket.io": "^3.0.4",
+    "xhr2": "^0.2.0",
     "xss-clean": "^0.1.1"
   }
 }
